# projet_ift2935

./: .gitignore  Cargo.toml  LDD_LMD.sql  README.md  T-SQL.sql  package-lock.json  package.json  requetes.sql  schema.sql  script.sql  todo.md
backend/: Cargo.toml
backend/src/: api.rs  config.rs  db.rs  event.rs  game.rs  main.rs  main.rsbak  models.rs  sport.rs  test.rs  users.rs
backend/src/models/: event.rs  game.rs  mod.rs  partial_users.rs  players.rs  sport.rs  staff.rs  team.rs  users.rs
backend/src/routes/: event_routes.rs  game_routes.rs  login_register_routes.rs  mod.rs  player_routes.rs  team_routes.rs  user_routes.rs
backend/target 2/: .rustc_info.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  EventList.tsx  EventList.tsxbak  GameList.tsx  GameList.tsxbak  Login.tsx  Login.tsxbak  RegisterModal.tsx  RegisterModal.tsxbak  SignInSide.tsx  TeamList.tsx  UserList.tsx  atoms.ts  index.tsx  theme.ts  userType.ts
frontend/src/Components/: AddEventModal.tsx  AddGameModal.tsx  AddTeamModal.tsx  AddUserModal.tsx  EditEventModal.tsx  EditGameModal.tsx  EditTeamModal.tsx  EditUserModal.tsx  useToken.ts
frontend/src/Components/Entities/: Event.ts  Game.ts  Team.ts  User.ts
frontend/src/Components/Navbar/: NavBar.tsx
src/: event.rs  game.rs  main.rs  sport.rs  staff.rs  team.rs  test.rs  users.rs
