[package]
name = "my_database_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-std = "1.12.0"
tiberius = "=0.9.2"
tokio = {version= "1.36.0", features = ["full"]}
tokio-util = {version = "0.7.10", features = ["compat"]}


