[package]
name = "my_database_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-std = "1.12.0"
rand = "0.8.5"
tiberius = "=0.9.2"
tokio = {version= "1.36.0", features = ["full"]}
tokio-util = {version = "0.7.10", features = ["compat"]}
fake = { version = "2.9.2", features = ["derive"] }
random-string = "1.1.0"
chrono = "0.4.35"
axum = "0.7.4"
actix-web = { version = "4", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
derive-new = "0.6.0"
serde_json = "1.0.114"
actix-cors = "0.7.0"

